--- a/package.json
+++ b/package.json
@@ -111,5 +111,5 @@
     ]
   },
   "homepage": "",
-  "proxy": "https://ride-ng.herokuapp.com"
+  "proxy": "https://notification-ng.herokuapp.com"
 }
