--- a/package.json
+++ b/package.json
@@ -49,14 +49,19 @@
     "react": "17.0.2",
     "react-icons": "^4.3.1",
     "react-native": "0.67.2",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "1.10.3",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keychain": "6.2.0",
     "react-native-localize": "^2.2.1",
+    "react-native-paper": "^4.12.1",
     "react-native-progress-steps": "^1.3.4",
     "react-native-region-country-picker": "^1.1.2",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "3.8.0",
     "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-virtual-keyboard": "^1.2.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.1",
